# astrolabe

./: auth.py  eventjson.json  events.py  main.py  pastEvent.py  uploadImage.py
backend/: main.py  pyproject.toml  requirements.txt  setup.md
frontend/: .gitignore  app.json  babel.config.js  eas.json  metro.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/app/: _layout.tsx  ar.tsx  auth.tsx  camera.tsx  index.tsx  location-editor.tsx  map.tsx  profile.tsx
frontend/assets/: counter_model.tflite
frontend/astrolabe/: app.json  package-lock.json  package.json
frontend/components/: BottomNav.tsx  RoomScanner.tsx  StarBackground.tsx
frontend/components/ui/: text.tsx
frontend/ios/frontend/: Info.plist
frontend/ios/frontend.xcodeproj/: project.pbxproj
my_navigation_project/: KerasToTFLite.py  class_names.txt  mainCV.py  singleTest.py
